components rendering from store, store configured

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^1.18.9",
     "prop-types": "^15.5.10",
     "react": "^15.3.2",
+    "react-addons-create-fragment": "^15.6.2",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
